[package]
name = "rustdfs-client"
version = "0.1.0"
edition = "2024"
rust-version = "1.92.0"

[dependencies]
clap = { version = "4.5.59", features = ["derive"] }
futures = "0.3.31"
tonic = "0.14"
prost = "0.14"
tokio = { version = "1.47", features = ["macros", "rt-multi-thread", "fs"] }
tonic-prost = "0.14"

[build-dependencies]
tonic-prost-build = "0.14"

[[bin]]
name = "rustDFS-client"
path = "src/main.rs"
