[package]
name = "rustdfs-namenode"
version = "0.0.0"
edition = "2024"
rust-version = "1.92.0"

[dependencies]
rustdfs-shared = { path = "../shared", version = "0.0.0" }
clap = { version = "4.5.59", features = ["derive"] }
futures = "0.3.31"
uuid = { version = "1.21.0", features = ["v4", "fast-rng"] }
rand = "0.9"
tonic = "0.14"
prost = "0.14"
tokio = { version = "1.47", features = ["macros", "rt-multi-thread"] }
tokio-stream = "0.1"
tonic-prost = "0.14"
tonic-prost-build = "0.14"
tonic-reflection = "0.14"
tonic-health = "0.14"

[build-dependencies]
tonic-prost-build = "0.14"

[[bin]]
name = "rustDFS-namenode"
path = "src/main.rs"
