[package]
name = "rustdfs-shared"
version = "0.0.0"
edition = "2024"

[dependencies]
chrono = "0.4.43"
clap = { version = "4.5.59", features = ["derive"] }
toml = "0.9.8"
tonic = "0.14"
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1.47", features = ["macros", "rt-multi-thread"] }

[lib]
path = "src/shared.rs"
